Fixes
Fixed some layout problems, added container box

--- a/gamefinder-main/main.css
+++ b/gamefinder-main/main.css
@@ -3,10 +3,6 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Exo', sans-serif;
-    
-    --base-color: #fff;
-    --input-color: #939393;
-    --link-txt-color: #5FE19B;  
 }
 
 #main-page{
@@ -18,14 +14,14 @@ body{
     overflow: hidden;
     margin: 0;
 	padding: 0;
-	width: 1440px;
+	width: 100%;
 	height: 1024px;
 	left: 0px;
 	top: 0px;
 }
 
 .main-menu{
-    width: 1440px;
+    width: 100%;
     height: 94px;
     background: linear-gradient(180deg, #5FE19B 0%, #36B972 50%, #0EA152 100%);
     box-shadow: 1px -3px 36px rgba(0, 0, 0, 0.5);
@@ -33,15 +29,10 @@ body{
     position: relative;
     display: flex;
     justify-content: space-between;
-    
-
-    
+   
 }
 
 .logo-gamefinder{
-    
-    top: 0px;
-    left: 0px;
     margin: 0 0 0 2em;
     width: 267px;
     height: 32px;
@@ -49,13 +40,12 @@ body{
 
 .search-bar{
     
-    width: 340px;
+    width: 362px;
     height: 47px;
     background-color: #fff;
     border-radius: 4px;
     align-items: center;
-    top: 0px;
-    margin-right: 560px;
+    margin-right: 43%;
     display: flex;
 
 }
@@ -89,8 +79,9 @@ body{
     position: absolute; /* flex  margin*/
     width: 48px;
     height: 48px;
-    left: 1352px;
+    margin: 0 0 0 95%;
     text-decoration: none;
+    
 }
 
 .account-menu{
@@ -130,13 +121,13 @@ body{
     text-align: right;
 }
 
-.other{
+.sub-menu{
     width: 1440px;
     height: 120px;
     position: absolute;
 }
 
-.other h1{
+.sub-menu h1{
     margin-left: 0.83em;
     margin-top: 0.3em;
     font-style: normal;
@@ -146,7 +137,7 @@ body{
     color: #FFFFFF;
 }
 
-.other p{
+.sub-menu p{
     margin-left: 2.3em;
     margin-top: -1.8em;
     font-style: normal;
@@ -162,6 +153,7 @@ body{
     height: 650px;
     width: 260px;
     margin-top: 8.5em;
+    
    
 }
 
@@ -215,3 +207,16 @@ a:hover{
 a:focus{
     color: #5FE19B;
 }
+
+.container{
+    height: 1000px;
+    width: 84%;
+    background-color: red;
+    display: grid;
+    margin: -30% auto auto 13%;
+
+    display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 40px;
+}
+
